<resources>
    <string name="app_name">SecondHand</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_jual">Daftar Jual</string>
    <string name="akun">Akun</string>
    <string name="jual">Jual</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="homepage">Homepage</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_jual_saya">Daftar Jual Saya</string>
    <string name="nama_penjual">Nama Penjual</string>
    <string name="asal_kota">Asal Kota</string>
    <string name="edit">Edit</string>
    <string name="produk">Produk</string>
    <string name="diminati">Diminati</string>
    <string name="terjual">Terjual</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="kategori">Kategori</string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="desc_example">Contoh: Gelasan khusus tournament</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="preview">Preview</string>
    <string name="terbitkan">Terbitkan</string>
    <string name="cari_di_second_hand">Cari di Second Hand</string>
    <string name="bulan_ramadhan_banyak_diskon">Bulan Ramadhan Banyak Diskon!</string>
    <string name="diskon_hingga">Diskon Hingga</string>
    <string name="_60">60%</string>
    <string name="telusuri_kategori">Telusuri Kategori</string>
    <string name="semua">Semua</string>
    <string name="rp_250_000">Rp.250.000</string>
    <string name="aksesoris">Aksesoris</string>
    <string name="jam_tangan_casio">Jam Tangan Casio</string>
    <string name="ditawar_rp_250_000">Ditawar Rp.250.000</string>
    <string name="_20_apr_14_04">20 Apr, 14:04</string>
    <string name="penawaran_produk">Penawaran Produk</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mulai_nego">Mulai Nego</string>
    <string name="minuman">Minuman</string>
    <string name="hobi">Hobi</string>
    <string name="kosmetik">Kosmetik</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="elektronik">Elektronik</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="lengkapi_detail_produk">Lengkapi Detail Produk</string>
    <string name="kota">Kota</string>
    <string name="lengkapi_info_akun">Lengkapi Info Akun</string>
    <string name="simpan">Simpan</string>
    <string name="alamat">Alamat</string>
    <string name="no_handphone">No Handphone</string>
    <string name="saya_tertarik_dan_ingin_nego">Saya Tertarik dan Ingin Nego</string>
    <string name="nego_desc">Harga tawaranmu akan diketahui penjual, jika penjual cocok kamu akan segera dihubungi penjual.</string>
    <string name="masukan_harga_tawarmu">Masukan harga tawarmu</string>
    <string name="kirim">Kirim</string>
    <string name="harga_tawar">Harga Tawar</string>
    <string name="description">Description</string>
    <string name="me_mail_com">me@mail.com</string>
    <string name="min_6_karakter">Min. 6 karakter</string>
    <string name="_08xx">08xx</string>
    <string name="nama_tidak_valid">Nama tidak valid</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="no_handphone_tidak_valid">No Handphone tidak valid</string>
    <string name="alamat_tidak_valid">Alamat tidak valid</string>
    <string name="isi_alamat_dengan_benar">Isi alamat dengan benar</string>
    <string name="silahkan_upload_foto_profile">Silahkan upload foto profile</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="lokasi">Lokasi</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ditawar">Ditawar</string>
    <string name="rp_25_999">Rp. 25.999</string>
    <string name="login">Login</string>
    <string name="silahkan_login">Silahkan login untuk mengakses fitur ini</string>
    <string name="anda_belum_login">Anda belum login</string>
    <string name="anda_tidak_memiliki_barang_dagangan">Anda tidak memiliki barang dagangan</string>
    <string name="silahkan_upload_barang">Silahkan upload barang yang ingin dijual</string>
    <string name="anda_belum_memiliki_pesanan">Anda belum memiliki pesanan</string>
    <string name="belum_ada_barang_yang_ditawar">Belum ada barang yang ditawar</string>
    <string name="selamat_anda_mendapatkan_harga_yang_sesuai">Selamat, anda mendapatkan harga yang sesuai</string>
    <string name="segera_hubungi_pembeli_melalui_whatsapp_untuk_transaksi_selanjutnya">Segera hubungi pembeli melalui whatsapp untuk transaksi selanjutnya</string>
    <string name="product_match">Product Match</string>
    <string name="hubungi_via_whatsapp">Hubungi Via WhatsApp</string>
    <string name="nama_pembeli">Nama pembeli</string>
    <string name="kota_product_match">Kota</string>
    <string name="ditawar_product_match">Ditawar</string>
    <string name="rp_200_000">Rp.200.000</string>
    <string name="info_penawar">Info Penawar</string>
    <string name="daftar_produkmu_yang_ditawar">Daftar Produkmu yang Ditawar</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="ditawar_rp_25_000">Ditawar Rp.25.000</string>
    <string name="data_ditawar">Ditawar %s</string>
    <string name="data_berhasil_ditawar">Berhasil Ditawar %s</string>
    <string name="kamu_akan_segera_dihubungi_penjual_via_whatsapp">Kamu akan segera dihubungi penjual via whatsapp</string>
    <string name="success_register">Berhasil mendaftar! Silahkan login</string>
    <string name="bargain_success">Berhasil menawar! Silahkan tunggu respon penjual</string>
    <string name="error_email_password">Email atau Password salah</string>
    <string name="error_email_already_exist">Email sudah ada</string>
    <string name="error_no_internet">Tidak ada koneksi internet</string>
    <string name="error_internal_server">Internal Server Error</string>
    <string name="error_has_order_product">you has order for this product</string>
    <string name="error_not_login">Silahkan login terlebih dahulu</string>
    <string name="no_order">Belum ada produkmu yang diminati</string>
    <string name="tidak_ada">Tidak ada</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_for_this_query">No results found for this query</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="home">Home</string>
    <string name="cari_di_second_chance">Cari di Second Chance</string>
    <string name="handphone">Handphone</string>
    <string name="penawaran_anda_ditolak">Penawaran anda ditolak</string>
    <string-array name="city">
        <item>Aceh</item>
        <item>Bandar Lampung</item>
        <item>Bandung</item>
        <item>Denpasar</item>
        <item>Jakarta</item>
        <item>Makassar</item>
        <item>Medan</item>
        <item>Palembang</item>
        <item>Surabaya</item>
        <item>Lainnya</item>
    </string-array>
</resources>