<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepageFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/sellerNotificationFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/notifikasi" />
    <item
        android:id="@+id/addProductFragment"
        android:icon="@drawable/ic_sell"
        android:title="@string/jual" />
    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/daftar_jual" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/akun" />

</menu>