<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.SecondHand.Title.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/anda_belum_login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        style="@style/TextAppearance.SecondHand.Body.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/silahkan_login"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:icon="@drawable/ic_log_in"
        app:iconPadding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView6"
        app:layout_constraintStart_toEndOf="@+id/materialTextView6"
        app:layout_constraintStart_toStartOf="@+id/materialTextView6"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

</androidx.constraintlayout.widget.ConstraintLayout>